--- a/index.html
+++ b/index.html
@@ -738,13 +738,13 @@
       background-repeat:no-repeat;
     }
     .card__header[data-step="1"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos1.jpg");
+      background-image:url("foto's onze aanpak/roos1.jpg");
     }
     .card__header[data-step="2"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos2.jpg");
+      background-image:url("foto's onze aanpak/roos2.jpg");
     }
     .card__header[data-step="3"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos3.jpg");
+      background-image:url("foto's onze aanpak/roos3.jpg");
     }
     .card__media img{
       display:none;
@@ -1696,14 +1696,14 @@
 
   <!-- SPLASH SCREEN -->
   <div class="splash-screen" id="splashScreen">
-    <img src="assets/HH logo.png" alt="Healthy Habits">
+    <img src="HH logo.png" alt="Healthy Habits">
   </div>
 
   <!-- TOPBAR -->
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="aanbod.html">Ons aanbod</a>
@@ -1724,7 +1724,7 @@
 
   <!-- HERO -->
   <header class="hero">
-    <img src="assets/homepagina foto/intake.jpg" alt="Healthy Habits sfeer">
+    <img src="homepagina foto/intake.jpg" alt="Healthy Habits sfeer">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
       <h1>Warm. Persoonlijk. Resultaatgericht.</h1>
@@ -1763,7 +1763,7 @@ zelfs leuk.</p>
 
       <div class="split-video">
         <video id="splitVideo" muted loop playsinline>
-          <source src="assets/volledig goede kopie.MOV" type="video/quicktime">
+          <source src="volledig goede kopie.MOV" type="video/quicktime">
           Je browser ondersteunt geen video.
         </video>
         <button class="video-play-btn" id="videoPlayBtn" aria-label="Play video">
@@ -1796,77 +1796,77 @@ zelfs leuk.</p>
           <div class="aanbod-carousel-slides" id="aanbodSlides">
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/1.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/1.jpeg" alt="" loading="lazy">
           </div>
           </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/2.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/2.jpg" alt="" loading="lazy">
           </div>
           </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/3.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/3.jpeg" alt="" loading="lazy">
         </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/4.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/4.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/5.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/5.jpeg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/6.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/6.jpeg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/IMG_0374.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/IMG_0374.jpeg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/IMG_5630 kopie.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/IMG_5630 kopie.jpeg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/WhatsApp Image 2023-06-19 at 15.07.13 kopie.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/WhatsApp Image 2023-06-19 at 15.07.13 kopie.jpeg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/fitness.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/fitness.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/groepsles.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/groepsles.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/milon.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/milon.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/orgineel kopie.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/orgineel kopie.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/sauna.jpg" alt="" loading="lazy">
+                <img src="foto's aanbod/sauna.jpg" alt="" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/yoga.jpeg" alt="" loading="lazy">
+                <img src="foto's aanbod/yoga.jpeg" alt="" loading="lazy">
               </div>
             </div>
           </div>
@@ -1989,7 +1989,7 @@ zelfs leuk.</p>
             <div class="reviews-carousel-slides" id="reviewsSlides">
               <div class="review-card active">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/slide 1.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/slide 1.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Pieter</h3>
@@ -2000,7 +2000,7 @@ zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/slide 2.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/slide 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Marieke</h3>
@@ -2011,7 +2011,7 @@ zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_5025.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/IMG_5025.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Erik</h3>
@@ -2022,7 +2022,7 @@ zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_5611 2.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/IMG_5611 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Linda</h3>
@@ -2033,7 +2033,7 @@ zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_6968.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/IMG_6968.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Rob</h3>
@@ -2044,7 +2044,7 @@ zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_6976.jpeg" alt="Review" loading="lazy">
+                  <img src="resultaatkaartjes/IMG_6976.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Sandra</h3>
@@ -2070,7 +2070,7 @@ zelfs leuk.</p>
           <div class="review-video-item">
             <div class="video-wrapper">
               <video class="review-video" muted loop playsinline preload="metadata">
-                <source src="assets/filmpjes revieuw/Monique.mov" type="video/quicktime">
+                <source src="filmpjes revieuw/Monique.mov" type="video/quicktime">
                 Je browser ondersteunt geen video.
               </video>
               <button class="review-video-play-btn" aria-label="Play video">
@@ -2090,7 +2090,7 @@ zelfs leuk.</p>
           <div class="review-video-item">
             <div class="video-wrapper">
               <video class="review-video" muted loop playsinline preload="metadata">
-                <source src="assets/filmpjes revieuw/ton.mov" type="video/quicktime">
+                <source src="filmpjes revieuw/ton.mov" type="video/quicktime">
                 Je browser ondersteunt geen video.
               </video>
               <button class="review-video-play-btn" aria-label="Play video">
