--- a/aanbod.html
+++ b/aanbod.html
@@ -269,7 +269,7 @@
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="aanbod.html">Ons aanbod</a>
@@ -298,7 +298,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Milon</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/1 milon.jpg" alt="Milon" loading="lazy">
+            <img src="aanbod pagina foto's/1 milon.jpg" alt="Milon" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Sporten in slechts 35 minuten</h2>
@@ -308,7 +308,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Fitness</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/2 fitness.jpg" alt="Fitness" loading="lazy">
+            <img src="aanbod pagina foto's/2 fitness.jpg" alt="Fitness" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Vrij trainen met begeleiding</h2>
@@ -318,7 +318,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Voeding</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/3 voeding.jpg" alt="Voeding" loading="lazy">
+            <img src="aanbod pagina foto's/3 voeding.jpg" alt="Voeding" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Een plan dat je volhoudt</h2>
@@ -328,7 +328,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Yoga</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/4 yoga.jpg" alt="Yoga" loading="lazy">
+            <img src="aanbod pagina foto's/4 yoga.jpg" alt="Yoga" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Meer rust en mobiliteit</h2>
@@ -338,7 +338,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Pixformance</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/5 pix formance.jpg" alt="Pixformance" loading="lazy">
+            <img src="aanbod pagina foto's/5 pix formance.jpg" alt="Pixformance" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Gericht trainen met feedback</h2>
@@ -348,7 +348,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">BBB</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/6 BBB.jpeg" alt="BBB" loading="lazy">
+            <img src="aanbod pagina foto's/6 BBB.jpeg" alt="BBB" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Buikt, Billen en Benen</h2>
@@ -358,7 +358,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Barre</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/7 Barre.jpg" alt="Barre" loading="lazy">
+            <img src="aanbod pagina foto's/7 Barre.jpg" alt="Barre" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Elegant en krachtig trainen</h2>
@@ -368,7 +368,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Pilates</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/8 pilates.jpeg" alt="Pilates" loading="lazy">
+            <img src="aanbod pagina foto's/8 pilates.jpeg" alt="Pilates" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Sterke core en controle</h2>
@@ -378,7 +378,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Cardio</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/9 cardio.jpg" alt="Cardio" loading="lazy">
+            <img src="aanbod pagina foto's/9 cardio.jpg" alt="Cardio" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Conditie opbouwen en vet verbranden</h2>
@@ -388,7 +388,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Sauna</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/10 sauna.jpg" alt="Sauna" loading="lazy">
+            <img src="aanbod pagina foto's/10 sauna.jpg" alt="Sauna" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Ontspanning en herstel</h2>
@@ -398,7 +398,7 @@
         <div class="succes-card">
           <h3 class="succes-card__title-header card-top-title">Gezelligheid</h3>
           <div class="succes-card__image">
-            <img src="assets/aanbod pagina foto's/11 gezelligheid.jpeg" alt="Gezelligheid" loading="lazy">
+            <img src="aanbod pagina foto's/11 gezelligheid.jpeg" alt="Gezelligheid" loading="lazy">
           </div>
           <div class="succes-card__content">
             <h2 class="succes-card__result card-subtitle">Samen sporten en connecten</h2>
