--- a/lidmaatschapstest.html
+++ b/lidmaatschapstest.html
@@ -854,7 +854,7 @@
   <header class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="aanbod.html">Ons aanbod</a>
@@ -877,7 +877,7 @@
 
   <!-- 1. HERO -->
   <section class="hero">
-    <img src="assets/homepagina foto/lidmaatschapstest.jpeg" alt="Healthy Habits sfeer">
+    <img src="homepagina foto/lidmaatschapstest.jpeg" alt="Healthy Habits sfeer">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
       <h1>Ontdek welk lidmaatschap bij jou past</h1>
@@ -1194,7 +1194,7 @@
           <div class="reviews-carousel-slides" id="reviewsSlides">
             <div class="review-card active">
               <div class="review-card__image">
-                <img src="assets/succesverhalen/Bas.jpeg" alt="Review" loading="lazy">
+                <img src="succesverhalen/Bas.jpeg" alt="Review" loading="lazy">
               </div>
               <div class="review-card__content">
                 <h3 class="review-card__name">Bas</h3>
@@ -1205,7 +1205,7 @@
 
             <div class="review-card">
               <div class="review-card__image">
-                <img src="assets/succesverhalen/Esther.jpeg" alt="Review" loading="lazy">
+                <img src="succesverhalen/Esther.jpeg" alt="Review" loading="lazy">
               </div>
               <div class="review-card__content">
                 <h3 class="review-card__name">Esther</h3>
@@ -1216,7 +1216,7 @@
 
             <div class="review-card">
               <div class="review-card__image">
-                <img src="assets/succesverhalen/Franceska.jpeg" alt="Review" loading="lazy">
+                <img src="succesverhalen/Franceska.jpeg" alt="Review" loading="lazy">
               </div>
               <div class="review-card__content">
                 <h3 class="review-card__name">Franceska</h3>
@@ -1227,7 +1227,7 @@
 
             <div class="review-card">
               <div class="review-card__image">
-                <img src="assets/succesverhalen/Harry.jpeg" alt="Review" loading="lazy">
+                <img src="succesverhalen/Harry.jpeg" alt="Review" loading="lazy">
               </div>
               <div class="review-card__content">
                 <h3 class="review-card__name">Harry</h3>
@@ -1238,7 +1238,7 @@
 
             <div class="review-card">
               <div class="review-card__image">
-                <img src="assets/succesverhalen/Ingrid.jpeg" alt="Review" loading="lazy">
+                <img src="succesverhalen/Ingrid.jpeg" alt="Review" loading="lazy">
               </div>
               <div class="review-card__content">
                 <h3 class="review-card__name">Ingrid</h3>
