--- a/succesverhalen.html
+++ b/succesverhalen.html
@@ -339,7 +339,7 @@
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="aanbod.html">Ons aanbod</a>
@@ -368,7 +368,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Madelon<span class="age">, 52</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/madelon.jpeg" alt="Madelon" loading="lazy">
+            <img src="succesverhalen/madelon.jpeg" alt="Madelon" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -378,7 +378,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Ronald<span class="age">, 54</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Ronald.jpeg" alt="Ronald" loading="lazy">
+            <img src="succesverhalen/Ronald.jpeg" alt="Ronald" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Fitter worden</div>
@@ -388,7 +388,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Ingrid<span class="age">, 47</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Ingrid.jpeg" alt="Ingrid" loading="lazy">
+            <img src="succesverhalen/Ingrid.jpeg" alt="Ingrid" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Fitter worden</div>
@@ -398,7 +398,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Esther<span class="age">, 38</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Esther.jpeg" alt="Esther" loading="lazy">
+            <img src="succesverhalen/Esther.jpeg" alt="Esther" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -408,7 +408,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Harry<span class="age">, 52</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Harry.jpeg" alt="Harry" loading="lazy">
+            <img src="succesverhalen/Harry.jpeg" alt="Harry" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer kracht</div>
@@ -418,7 +418,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Laura<span class="age">, 36</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Laura.jpeg" alt="Laura" loading="lazy">
+            <img src="succesverhalen/Laura.jpeg" alt="Laura" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -428,7 +428,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Jan<span class="age">, 55</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Jan.jpeg" alt="Jan" loading="lazy">
+            <img src="succesverhalen/Jan.jpeg" alt="Jan" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer kracht</div>
@@ -438,7 +438,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Marlies<span class="age">, 44</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Marlies.jpeg" alt="Marlies" loading="lazy">
+            <img src="succesverhalen/Marlies.jpeg" alt="Marlies" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer kracht</div>
@@ -448,7 +448,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Bas<span class="age">, 45</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Bas.jpeg" alt="Bas" loading="lazy">
+            <img src="succesverhalen/Bas.jpeg" alt="Bas" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer kracht</div>
@@ -458,7 +458,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Franceska<span class="age">, 42</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Franceska.jpeg" alt="Franceska" loading="lazy">
+            <img src="succesverhalen/Franceska.jpeg" alt="Franceska" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -468,7 +468,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Karin<span class="age">, 41</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Karin.jpeg" alt="Karin" loading="lazy">
+            <img src="succesverhalen/Karin.jpeg" alt="Karin" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -478,7 +478,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Nienke<span class="age">, 39</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Nienke.jpeg" alt="Nienke" loading="lazy">
+            <img src="succesverhalen/Nienke.jpeg" alt="Nienke" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -488,7 +488,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Renee<span class="age">, 48</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Renee.jpeg" alt="Renee" loading="lazy">
+            <img src="succesverhalen/Renee.jpeg" alt="Renee" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
@@ -498,7 +498,7 @@
         <div class="succes-card">
           <h3 class="succes-card__name-header">Robbert<span class="age">, 50</span></h3>
           <div class="succes-card__image">
-            <img src="assets/succesverhalen/Robbert.jpeg" alt="Robbert" loading="lazy">
+            <img src="succesverhalen/Robbert.jpeg" alt="Robbert" loading="lazy">
           </div>
           <div class="succes-card__content">
             <div class="succes-card__result">Meer energie</div>
