--- a/tarieven.html
+++ b/tarieven.html
@@ -539,7 +539,7 @@
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="aanbod.html">Ons aanbod</a>
@@ -560,7 +560,7 @@
 
   <!-- 1. HERO -->
   <section class="hero">
-    <img src="assets/homepagina foto/intake.jpg" alt="Healthy Habits sfeer">
+    <img src="homepagina foto/intake.jpg" alt="Healthy Habits sfeer">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
       <h1>Prijzen</h1>
