fix html structuur

--- a/index.html
+++ b/index.html
@@ -1474,8 +1474,11 @@
 
   </style>
 </head>
-
 <body>
+  <div style="background:red;color:white;font-size:24px;">
+    TEST LIVE
+  </div>
+  
 
   <!-- SPLASH SCREEN -->
   <div class="splash-screen" id="splashScreen">
@@ -1647,7 +1650,6 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
       </div>
     </section>
 
-  </main>
     <section class="section">
       <div class="container">
         <h2>Onze aanpak</h2>
@@ -1922,8 +1924,6 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
         </div>
       </div>
     </section>
-
-  </main>
 
   <script>
     const items = document.querySelectorAll('.vnode.hoverable');
